Fixing indent and adding copyright header