@@ -1,3 +1,10 @@
+/**
+ * Copyright 2020 lambdaprime
+ * 
+ * Email: id.blackmesa@gmail.com 
+ * Website: https://github.com/lambdaprime
+ * 
+ */
 package id.jnix.net.dhcpd;
 
 import java.net.InetAddress;
@@ -7,21 +14,21 @@ import java.util.stream.Collectors;
 
 public class Subnet {
 
-	InetAddress subnet;
-	InetAddress netmask;
-	List<Host> hosts = List.of();
-	
-	public Subnet(InetAddress subnet, InetAddress netmask, Host...hosts) {
-		this.subnet = subnet;
-		this.netmask = netmask;
-		this.hosts = Arrays.asList(hosts);
-	}
+    InetAddress subnet;
+    InetAddress netmask;
+    List<Host> hosts = List.of();
 
-	@Override
-	public String toString() {
-		return String.format("subnet %s netmask %s { %s }", subnet.getHostAddress(),
-				netmask.getHostAddress(),
-				hosts.stream().map(Host::toString)
-				.collect(Collectors.joining("\n")));
-	}
+    public Subnet(InetAddress subnet, InetAddress netmask, Host...hosts) {
+        this.subnet = subnet;
+        this.netmask = netmask;
+        this.hosts = Arrays.asList(hosts);
+    }
+
+    @Override
+    public String toString() {
+        return String.format("subnet %s netmask %s { %s }", subnet.getHostAddress(),
+                netmask.getHostAddress(),
+                hosts.stream().map(Host::toString)
+                .collect(Collectors.joining("\n")));
+    }
 }
